fix: resolution complete de toutes les anomalies SonarQube